--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </div>
                         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit,magna a elementum tristique, ipsum est posuere leo, at faucibus risus leo a nisi.</p>
                     </div>
-                    <img src="https://media.licdn.com/dms/image/C5622AQHBgcDWs5Zm1g/feedshare-shrink_800/0/1671691128771?e=1675296000&v=beta&t=ijE4XCZY3A4WyaJBNHkNBYsHbxE6kh66vgI0CQEGaV8"
+                    <img src="https://images.pexels.com/photos/14930425/pexels-photo-14930425.jpeg"
                         alt="postimg">
                 </div>
                 <div class="comment-area">
